<resources>

    <string name="app_name">Simple DataBase</string>

    <string name="basic_list_of_entry_activity">Basic Information List</string>
    <string name="container_widget">Container Widget</string>

    <string name="contact_id">Id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="home_address">Address</string>

    <string name="add_button">ADD</string>
    <string name="get_button">GET</string>
    <string name="delete_button">DELETE</string>
    <string name="update_button">UPDATE</string>
    <string name="title_activity_detailed_single_entry">DetailedSingleEntryActivity</string>

    <string name="shared_customer_id">com.example.mantoshkumar.customer_id</string>

    <string name="correct">Successfully Completed</string>
    <string name="incorrect">Failed Operation</string>

    <string name="result_add_button">KeyForAddButton</string>
    <string name="result_delete_button">KeyForDeleteButton</string>

    <string name="result_update_button">KeyForUpdateButton</string>
    <string name="result_fetch_while_startup">KeyForFetchWhileStartup</string>
    <string name="message_between_thread">KeyForExchangingBetweenMainAndWorkerThread</string>

    <string name="result_fetch_all_entry">KeyForFetchAllEntry</string>

</resources>